CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/install.cmake OPTIONAL)

ENABLE_LANGUAGE(C CXX)

PROJECT(cpt_yahsp_library)

FIND_PACKAGE(OpenMP)

# FIND_PACKAGE(MPI)

ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)

IF (CMAKE_BUILD_TYPE MATCHES Debug)
  ADD_DEFINITIONS(-Wall -g)
ELSE()
  ADD_DEFINITIONS(-Wall -g -O2)
ENDIF()

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${CMAKE_CURRENT_SOURCE_DIR}/gdsl/src
  )

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})

ADD_SUBDIRECTORY(gdsl)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(application)
