## Process this file with automake to produce Makefile.in

CLEANFILES	= *~ .*~

doc_DATA	= doxygen.png \
		tab_b.gif \
		tab_l.gif \
		tab_r.gif \
		tabs.css \
		doxygen.css \
		main.html \
		files.html \
		__gdsl__bintree_8h-source.html \
		__gdsl__bstree_8h-source.html \
		__gdsl__list_8h-source.html \
		__gdsl__node_8h-source.html \
		gdsl_8h-source.html \
		gdsl__2darray_8h-source.html \
		gdsl__bstree_8h-source.html \
		gdsl__hash_8h-source.html \
		gdsl__heap_8h-source.html \
		gdsl__list_8h-source.html \
		gdsl__macros_8h-source.html \
		gdsl__perm_8h-source.html \
		gdsl__queue_8h-source.html \
		gdsl__rbtree_8h-source.html \
		gdsl__sort_8h-source.html \
		gdsl__stack_8h-source.html \
		gdsl__types_8h-source.html \
		mainpage_8h-source.html \
		__gdsl__bintree_8h.html \
		__gdsl__bstree_8h.html \
		__gdsl__list_8h.html \
		__gdsl__node_8h.html \
		gdsl_8h.html \
		gdsl__2darray_8h.html \
		gdsl__bstree_8h.html \
		gdsl__hash_8h.html \
		gdsl__heap_8h.html \
		gdsl__list_8h.html \
		gdsl__macros_8h.html \
		gdsl__perm_8h.html \
		gdsl__queue_8h.html \
		gdsl__rbtree_8h.html \
		gdsl__sort_8h.html \
		gdsl__stack_8h.html \
		gdsl__types_8h.html \
		mainpage_8h.html \
		group____gdsl__bintree.html \
		group____gdsl__bstree.html \
		group____gdsl__list.html \
		group____gdsl__node.html \
		group__gdsl.html \
		group__gdsl__2darray.html \
		group__gdsl__bstree.html \
		group__gdsl__hash.html \
		group__gdsl__heap.html \
		group__gdsl__list.html \
		group__gdsl__macros.html \
		group__gdsl__perm.html \
		group__gdsl__queue.html \
		group__gdsl__rbtree.html \
		group__gdsl__sort.html \
		group__gdsl__stack.html \
		group__gdsl__types.html \
		modules.html \
		globals.html \
		globals_0x62.html \
		globals_0x66.html \
		globals_0x67.html \
		globals_0x74.html \
		globals_0x75.html \
		globals_func.html \
		globals_func_0x67.html \
		globals_type.html \
		globals_enum.html \
		globals_eval.html \
		globals_defs.html \
		index.html \
		tree.html \
		ftv2blank.png \
		ftv2doc.png \
		ftv2folderclosed.png \
		ftv2folderopen.png \
		ftv2lastnode.png \
		ftv2link.png \
		ftv2mlastnode.png \
		ftv2mnode.png \
		ftv2node.png \
		ftv2plastnode.png \
		ftv2pnode.png \
		ftv2vertline.png

docdir          = $(datadir)/doc/@PACKAGE@/html

EXTRA_DIST	= $(doc_DATA)

fileslist:  	 
		@rm -f l && find . -iregex ".*\(html\|png\|css\|gif\)" >> l
